Fix social media div border overflowing screen on 1024px width screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -770,7 +770,6 @@ footer ul {
   footer .grid-container {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    margin: 0 10%;
   }
 }
 
